[gd_scene load_steps=4 format=3 uid="uid://3lkstt0pnjlc"]

[ext_resource type="Script" path="res://Player.gd" id="1_f8jsn"]
[ext_resource type="SpriteFrames" uid="uid://dxrc6ymvx856p" path="res://char/player.tres" id="2_yaedn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbfgr"]
size = Vector2(112, 156)

[node name="Player" type="Area2D"]
script = ExtResource("1_f8jsn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_yaedn")
animation = &"merge_loot"
offset = Vector2(0, -100)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-22, 12)
shape = SubResource("RectangleShape2D_mbfgr")

[node name="LootTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LootTimer" to="." method="_on_loot_timer_timeout"]
